k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mcp-java
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  selector:
    app: mcp-java
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: grpc
      port: 9090
      targetPort: 9090
      appProtocol: grpc
---
apiVersion: v1
kind: Service
metadata:
  name: mcp-java-native
spec:
  type: ClusterIP
  selector:
    app: mcp-java-native
  ports:
    - name: http
      port: 80
      targetPort: 8080
